# pyfrc

./: .gitignore  .project  .pydevproject  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.txt  pyproject.toml  requirements.txt  run_test.py  run_test_config.py  setup.cfg  setup.py  test.bat.example  test.sh.example  travis-requirements.txt  update_req.py
.github/workflows/: bump.yml  dist.yml
docs/: .gitignore  Makefile  advanced.rst  anatomy.rst  api.rst  builtin_tests.rst  conf.py  contributing.rst  custom.rst  deploy.rst  gensidebar.py  index.rst  install.rst  physics.rst  requirements.txt  simulator.rst  testing.rst  usage.rst  wpilib.rst
fake_wpilib/: NetworkTables.py  SmartDashboard.py  __init__.py  core.py  pid_controller.py
lib/_wpilib/: NetworkTables.py  SmartDashboard.py  __init__.py  _core.py  _smart_dashboard.py  core.py  internal.py
lib/fake_wpilib/: Buttons.py  Commands.py  NetworkTables.py  Preferences.py  SmartDashboard.py  __init__.py  core.py
lib/pyfrc/: config.py  configloader.py  main.py  util.py  version.py
lib/pyfrc/cli/: cli_coverage.py  cli_profiler.py  cli_sim.py  cli_test.py  cli_upload.py
lib/pyfrc/mains/: cli_add_tests.py  cli_coverage.py  cli_create_physics.py  cli_deploy.py  cli_profiler.py  cli_sim.py  cli_test.py  cli_upload.py  pyfrc_test.py
lib/pyfrc/physics/: __init__.py  core.py  drivetrains.py  motion.py  motor_cfgs.py  tankmodel.py  units.py  visionsim.py
lib/pyfrc/robotpy/: boot.py  fixbug.py  install.py  installer.py
lib/pyfrc/sim/: __init__.py  pygame_joysticks.py  robot_controller.py  sim_manager.py  sim_time.py  sim_wpilib.py  ui.py  ui_graph.py  ui_widgets.py
lib/pyfrc/sim/field/: elements.py  field.py  robot_element.py  user_renderer.py
lib/pyfrc/sim/widgets/: __init__.py  check_button_wrapper.py  panel_indicator.py  slider.py  state_display.py  tooltip.py  value_widget.py
lib/pyfrc/sim/widgets/field/: elements.py  field.py
lib/pyfrc/support/: fake_time.py  pyfrc_hal_hooks.py
lib/pyfrc/test_support/: controller.py  fake_time.py  pyfrc_fake_hooks.py  pytest_plugin.py
lib/pyfrc/tests/: __init__.py  basic.py  docstring_test.py  fuzz_test.py
lib/pyfrc/tests/iterative/: __init__.py  basic.py
lib/pyfrc/tests/iterative_robot/: __init__.py
lib/pyfrc/tests/sample_robot/: __init__.py  basic.py
lib/pyfrc/tests/simple/: __init__.py  basic.py
lib/pyfrc/util/: run_test.py
lib/pyfrc/wpilib/: __init__.py  core.py
lib/pyfrc/wpilib/_wpilib/: __init__.py  _core.py  _fake_time.py  _pid_controller.py  _smart_dashboard.py  internal.py
pyfrc/: __init__.py  config.py  util.py
pyfrc/mains/: cli_add_tests.py  cli_coverage.py  cli_create_physics.py  cli_deploy.py  cli_deploy_info.py  cli_profiler.py  cli_sim.py  cli_test.py  cli_undeploy.py
pyfrc/physics/: core.py  drivetrains.py  motion.py  motor_cfgs.py  tankmodel.py  units.py  visionsim.py
pyfrc/sim/: pygame_joysticks.py  sim_time.py
pyfrc/sim/field/: elements.py  field.py  robot_element.py
pyfrc/test_support/: controller.py  fake_time.py  pyfrc_fake_hooks.py  pytest_dist_plugin.py  pytest_isolated_tests_plugin.py  pytest_plugin.py
pyfrc/tests/: __init__.py  basic.py  docstring_test.py  fuzz_test.py
samples/: import_test.py
samples/iterative/src/: robot.py
samples/iterative/tests/: basic_test.py  docstring_test.py  fuzz_test.py  pyfrc_test.py
samples/physics-4wheel/src/: physics.py  robot.py
samples/physics-mecanum/src/: physics.py  robot.py
samples/physics-mecanum/src/sim/: config.json
samples/physics-spi/src/: physics.py  robot.py
samples/physics-spi/src/sim/: config.json
samples/physics/src/: physics.py  robot.py
samples/physics/src/sim/: config.json
samples/sample/src/: robot.py
samples/sample/tests/: basic_test.py  pyfrc_test.py
samples/simple/src/: robot.py
samples/simple/tests/: basic_test.py  fuzz_test.py  pyfrc_test.py
tests/: .project  conftest.py  drive_unit_test.py  old_test_tests.py  run_tests.py  run_tests.sh  test_drivetrains.py  test_faketime.py  test_placeholder.py  test_pytest_plugins.py  test_tankmodel.py  test_tests.py  test_visionsim.py  test_wpilib.py
