[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfrc"
dynamic = ["version"]
description = "Development tools library for python interpreter used for the FIRST Robotics Competition"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "pytest>=3.9",
  "pytest-reraise",
  "pint>=0.24.4",
  "wpilib>=2026.1.1b1,<2027",
  "robotpy-cli~=2026.0.1",
  "tomli"
]

[[project.authors]]
name = "Dustin Spicuzza"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/pyfrc"

[project.entry-points."robotpy_cli.2026"]
add-tests = "pyfrc.mains.cli_add_tests:PyFrcAddTests"
coverage = "pyfrc.mains.cli_coverage:PyFrcCoverage"
create-physics = "pyfrc.mains.cli_create_physics:PyFrcCreatePhysics"
profiler = "pyfrc.mains.cli_profiler:PyFrcProfiler"
sim = "pyfrc.mains.cli_sim:PyFrcSim"
test = "pyfrc.mains.cli_test:PyFrcTest"


[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".readthedocs.yml",
    "docs"
]

[tool.hatch.build.targets.wheel]
packages = ["pyfrc"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyfrc/version.py"
