[metadata]
name = pyfrc
description = Development tools library for python interpreter used for the FIRST Robotics Competition
long_description = file: README.md
long_description_content_type = text/markdown
author = Dustin Spicuzza
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/pyfrc
license = BSD-3-Clause
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pytest>=3.9
    pytest-reraise
    pynetconsole~=2.0.2
    pint>=0.11.0
    importlib-metadata; python_version < '3.8'

    robotpy-wpiutil>=2023.1.1.0,<2024
    pyntcore>=2023.1.1.0,<2024
    robotpy-hal>=2023.1.1.0,<2024
    wpilib>=2023.1.1.0,<2024

    robotpy-installer>=2023.0.0,<2024
setup_requires =
    setuptools_scm > 6
python_requires = >=3.7

[options.entry_points]
robotpy =
    add-tests = pyfrc.mains.cli_add_tests:PyFrcAddTests
    coverage = pyfrc.mains.cli_coverage:PyFrcCoverage
    create-physics = pyfrc.mains.cli_create_physics:PyFrcCreatePhysics
    deploy = pyfrc.mains.cli_deploy:PyFrcDeploy
    deploy-info = pyfrc.mains.cli_deploy_info:PyFrcDeployInfo
    profiler = pyfrc.mains.cli_profiler:PyFrcProfiler
    sim = pyfrc.mains.cli_sim:PyFrcSim
    test = pyfrc.mains.cli_test:PyFrcTest
    undeploy = pyfrc.mains.cli_undeploy:PyFrcUndeploy
